--- a/index.html
+++ b/index.html
@@ -7,19 +7,9 @@
     <link rel="stylesheet" href="./index.css">
 </head>
 <body>
-    <div id="root">
-        <!-- <h1>Hello World</h1> -->
-    </div>
-    <!-- <script>
-        const element = document.createElement('h1');
-        element.innerHTML = 'Hello World! JS';
-        const root = document.getElementById('root');
-        root.appendChild(element);
-    </script> -->
+    <div id="root"></div>
     <script crossorigin src="https://unpkg.com/react@18/umd/react.development.js"></script>
     <script crossorigin src="https://unpkg.com/react-dom@18/umd/react-dom.development.js"></script>
-    <script src="./app.js">
-        
-    </script>
+    <script src="./app.js"></script>
 </body>
 </html>
